# python-pptx-theme-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: discovery_of_exoplanets.py  minimal_deck.py  slide_showcase.py  slide_skeleton.py
prompts/: create-ppt.txt
src/python_pptx_theme_kit/: __init__.py  blocks.py  overlap.py  palettes.py  pptx_imports.py  primitives.py
tests/: test_library.py
