[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pptx-theme-kit"
version = "0.1.0"
description = "Reusable PowerPoint theming helpers built on python-pptx."
readme = "README.md"
authors = [{name = "Luca-Philipp Grumbach"}]
license = "GPL-3.0-only"
requires-python = ">=3.9"
dependencies = [
  "python-pptx>=1.0.2",
  "Pillow>=12.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
